--- a/jqSelectorWheel.css
+++ b/jqSelectorWheel.css
@@ -2,38 +2,51 @@
   display: inline-block;
   height: 26px;
   padding: 2px;
-  background-color: black;
+  background: #2a262a;
+  background: -moz-linear-gradient(0deg, #2a262a 20%, #797979 100%);
+  background: -webkit-linear-gradient(0deg, #2a262a 20%, #797979 100%);
+  background: -o-linear-gradient(0deg, #2a262a 20%, #797979 100%);
+  background: -ms-linear-gradient(0deg, #2a262a 20%, #797979 100%);
+  background: linear-gradient(90deg, #2a262a 20%, #797979 100%);
   border-radius: 5px;
+  z-index: 4;
 }
 .SelectorWheel .symbol {
   height: 18px;
   background: #eee;
   font-family: Arial, sans-serif;
-  border: solid 1px gray;
   margin: 0px 2px;
-  margin-top: 1px;
-  width: 8px;
-  max-width: 8px;
-  min-width: 8px;
+  margin-top: 2px;
+  width: 10px;
+  max-width: 10px;
+  min-width: 10px;
   text-align: center;
   display: inline-block;
   padding: 2px 3px;
   cursor: pointer;
+  -webkit-box-shadow: 3px -1px 2px 0px rgba(0, 0, 0, 0.85);
+  -moz-box-shadow: 3px -1px 2px 0px rgba(0, 0, 0, 0.85);
+  box-shadow: 3px -1px 2px 0px rgba(0, 0, 0, 0.85);
+  z-index: 5;
 }
-.SelectorWheel .lightning {
+.SelectorWheel .spanblock {
+  white-space: nowrap;
+}
+.SelectorWheel .shadow {
   width: 80px;
   height: 5px;
   display: inline-block;
   position: absolute;
   content: "";
+  z-index: 6;
 }
-.SelectorWheel .lightning-up {
+.SelectorWheel .shadow-up {
   -webkit-box-shadow: 0px 10px 5px 0px rgba(22, 33, 50, 0.47);
   -moz-box-shadow: 0px 10px 5px 0px rgba(22, 33, 50, 0.47);
   box-shadow: 0px 10px 5px 0px rgba(22, 33, 50, 0.47);
   top: 0px;
 }
-.SelectorWheel .lightning-down {
+.SelectorWheel .shadow-down {
   -webkit-box-shadow: 0px -10px 5px 0px rgba(22, 33, 50, 0.47);
   -moz-box-shadow: 0px -10px 5px 0px rgba(22, 33, 50, 0.47);
   box-shadow: 0px -10px 5px 0px rgba(22, 33, 50, 0.47);
